# OpenBSE

./: .gitignore  Cargo.toml  DOE_PROTOTYPE_GAP_ANALYSIS.md  LICENSE  PLAN.md  README.md  STATUS.md
140_tests/: README.md
140_tests/cases/: ashrae140_case600.yaml  ashrae140_case600ff.yaml  ashrae140_case610.yaml  ashrae140_case620.yaml  ashrae140_case630.yaml  ashrae140_case640.yaml  ashrae140_case650ff.yaml  ashrae140_case680.yaml  ashrae140_case900.yaml  ashrae140_case950.yaml  ashrae140_case960.yaml  ashrae140_case980ff.yaml  ashrae140_case985.yaml  ashrae140_case995.yaml  ashrae140_caseCE100.yaml
140_tests/reference_idfs/: Case200.idf  Case230.idf  Case240.idf  Case270.idf  Case280.idf  Case300.idf  Case310.idf  Case320.idf  Case400.idf  Case410.idf  Case420.idf  Case600.idf  Case600FF.idf  Case620.idf  Case630.idf  Case650.idf  Case810.idf  Case920.idf  Case930.idf  Case940.idf  Case950.idf  Case950FF.idf  case210.rvi  case460.idf  case470.idf  case610.rvi  case630.rvi  case640.rvi  case660.idf  case695.idf  case910.rvi  case920.rvi  case930.rvi  case980.idf  case985.idf
140_tests/results/: FULL_140_RESULTS.csv
140_tests/scripts/: run_all_600_series.sh  solar_validation.py
crates/openbse-cli/: Cargo.toml
crates/openbse-cli/src/: main.rs
crates/openbse-components/: Cargo.toml
crates/openbse-components/src/: boiler.rs  chiller.rs  chw_cooling_coil.rs  cooling_coil.rs  cooling_tower.rs  duct.rs  fan.rs  heat_exchanger.rs  heat_pump_coil.rs  heat_recovery.rs  heating_coil.rs  humidifier.rs  lib.rs  performance_curve.rs  pfp_box.rs  pump.rs  vav_box.rs  water_heater.rs
crates/openbse-controls/: Cargo.toml
crates/openbse-controls/src/: lib.rs  setpoint.rs  state.rs  thermostat.rs
crates/openbse-core/: Cargo.toml
crates/openbse-core/src/: graph.rs  lib.rs  ports.rs  simulation.rs  types.rs
crates/openbse-envelope/: Cargo.toml
crates/openbse-envelope/src/: convection.rs  ctf.rs  geometry.rs  ground_temp.rs  heat_balance.rs  infiltration.rs  internal_gains.rs  lib.rs  material.rs  schedule.rs  shading.rs  solar.rs  surface.rs  zone.rs  zone_loads.rs
crates/openbse-io/: Cargo.toml
crates/openbse-io/src/: input.rs  lib.rs  output.rs  sizing.rs
crates/openbse-psychrometrics/: Cargo.toml
crates/openbse-psychrometrics/src/: lib.rs
crates/openbse-weather/: Cargo.toml
crates/openbse-weather/src/: lib.rs
docs/: AI_CONTEXT.md  STATUS.md  ashrae140_gap_analysis.md  openbse_schema.json
docs/engineering-reference/: README.md
docs/user-guide/: README.md
eplus_comparison/: ApartmentMidRise_Boulder.yaml  ApartmentMidRise_Denver.idf  ApartmentMidRise_Denver_heatbal.idf  Hospital_STD2022_Boulder.yaml  LargeOffice_Boulder.yaml  LargeOffice_Denver.idf  LargeOffice_Denver_simplified.idf  SingleFamily_CZ5B_Boulder.yaml  compare_end_uses.py  compare_surfaces_and_loads.py  compare_zone_heatbal.py  compare_zone_loads.py  compare_zone_loads_side_by_side.py  extract_openbse_zone_loads.py  fix_volumes.py  fix_wall_heights.py  gen_apartment_yaml.py
eplus_comparison/eplus_sf_run/: eplusout.err  in.idf
examples/: 1zone_uncontrolled.yaml  chw_plant_condenser.yaml  doas_fancoil.yaml  doe_retail_standalone.yaml  heat_pump_rtu.yaml  multi_year_parametric.yaml  residential_unitary.yaml  retail_rtu.yaml  simple_heating.yaml  vav_chw_plant.yaml  vav_reheat.yaml
prototype_tests/: PROTOTYPE_VALIDATION_GUIDE.md  compare_end_uses.py  compare_surfaces_and_loads.py  compare_zone_loads.py  extract_openbse_zone_loads.py
prototype_tests/apartment/: ApartmentMidRise_Boulder.yaml  compare_bottom_floor.py  gen_apartment_yaml.py
prototype_tests/apartment/eplus_run/: eplusout.err  eplustbl.csv
prototype_tests/hospital/: Hospital_STD2022_Boulder.yaml
prototype_tests/large_office/: LargeOffice_Boulder.yaml
prototype_tests/large_office/eplus_run/: eplusout.err  eplustbl.csv  in.idf
prototype_tests/single_family/: SingleFamily_CZ5B_Boulder.idf  SingleFamily_CZ5B_Boulder.yaml  simplify_sf_idf.py
prototype_tests/single_family/eplus_run/: eplusout.err  eplustbl.csv  in.idf
tests/ashrae140/: README.md
tests/ashrae140/cases/: ashrae140_case600_layered_test.yaml  ashrae140_case650.yaml  ashrae140_case660.yaml  ashrae140_case670.yaml  ashrae140_case680ff.yaml  ashrae140_case685.yaml  ashrae140_case695.yaml  ashrae140_case900_test.yaml  ashrae140_case900ff.yaml  ashrae140_case910.yaml  ashrae140_case920.yaml  ashrae140_case930.yaml  ashrae140_case940.yaml  ashrae140_case950ff.yaml  ashrae140_case980.yaml
tests/ashrae140/reference_idfs/: Case195.idf  Case210.idf  Case215.idf  Case220.idf  Case250.idf  Case290.idf  Case395.idf  Case430.idf  Case440.idf  Case610.idf  Case640.idf  Case650FF.idf  Case800.idf  Case900.idf  Case900FF.idf  Case910.idf  Case960.idf  case195.rvi  case220.rvi  case450.idf  case470.rvi  case620.rvi  case670.idf  case680.idf  case680FF.idf  case685.idf  case960.rvi  case980FF.idf  case995.idf  case995.rvi
tests/ashrae140/scripts/: build_140_csv.py
tests/ashrae140/weather/: CE100A.csv
tools/editor/: package-lock.json  package.json
tools/editor/src/: App.css  App.tsx  index.css
tools/editor/src-tauri/: Cargo.toml  tauri.conf.json
tools/editor/src-tauri/src/: lib.rs
tools/editor/src/components/: ClassBrowser.tsx  ObjectEditor.tsx
tools/editor/src/lib/: crossref.ts  schema.ts  validation.ts
validation/: 1ZoneUncontrolled_validation.idf  compare_results.py
