[package]
name = "openbse-components"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HVAC and plant component models (fans, coils, boilers, etc.)"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
openbse-core = { workspace = true }
openbse-psychrometrics = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
