[package]
name = "openbse-controls"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Decoupled sensor/actuator control framework"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
openbse-core = { workspace = true }
openbse-psychrometrics = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
