[package]
name = "openbse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core simulation graph, solver, and simulation loop"

[dependencies]
thiserror = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
openbse-psychrometrics = { workspace = true }
openbse-weather = { workspace = true }
