[package]
name = "openbse-envelope"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Building envelope heat balance and surface models"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
openbse-core = { workspace = true }
openbse-psychrometrics = { workspace = true }
openbse-weather = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
