[package]
name = "openbse-psychrometrics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Psychrometric property calculations for moist air (matching EnergyPlus equations)"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
