[package]
name = "openbse-editor"
version = "0.1.0"
description = "OpenBSE YAML Input File Editor"
authors = ["OpenBSE Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bbrannon4/OpenBSE"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
